--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Impact", sans-serif;
+  src: url(../fonts/Impact.woff2);
+}
+
 html {
   box-sizing: border-box;
 }
@@ -10,26 +15,39 @@ html {
 
 a,
 ul,
-li{
+li {
   color: inherit;
   text-decoration: none;
   list-style: none;
 }
-body{
-font-family: 'Roboto Condensed', sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Condensed", sans-serif;
   color: #040404;
   font-size: 14px;
   line-height: 1.2;
   font-weight: 400;
 }
 
-.container {
+.big-container {
   max-width: 1220px;
   padding: 0 10px;
   margin: 0 auto;
 }
+
+.container {
+  max-width: 920px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
 .header {
-    padding-top: 25px;
+  padding-top: 25px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, #d8d4ca 0%, rgba(217, 217, 217, 0) 100%);
 }
 
 .nav {
@@ -43,7 +61,118 @@ font-family: 'Roboto Condensed', sans-serif;
   padding-top: 25px;
 }
 
+.menu-left {
+  padding-left: 23px;
+}
+.menu-right {
+  padding-right: 78px;
+}
+
 .menu-link {
-color: #363636;
-font-size: 16px;
+  color: #363636;
+  font-size: 16px;
+}
+.promo {
+  background-image: url(../images/Rectangle\ 14.jpg);
+  background-repeat: no-repeat; /*чтобы картинка не размножалась */
+  background-size: cover; /*чтобы картинка растянулась на весь экран */
+  background-position: center;
+}
+.promo__inner {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  text-align: center;
+}
+
+.title {
+  font-family: "Impact", sans-serif;
+  font-weight: 400;
+  font-size: 76px;
+  letter-spacing: 0.08em;
+  margin-bottom: 10px;
+}
+.subtitle {
+  font-family: "Impact", sans-serif;
+  font-weight: 400;
+  font-size: 48px;
+  border-bottom: 1px solid #040404;
+  margin-bottom: 10px;
+  align-self: center;
+}
+.subtitle span {
+  display: block; /*перенесёт на другую строчку */
+  font-size: 34px;
+  color: #9f6b08;
+  padding: 10px 0;
+}
+.promo__text {
+  font-size: 16px;
+  color: #363636;
+  margin-bottom: 10px;
+}
+.promo__arrow {
+  margin-top: auto;
+  margin-bottom: 30px;
+  align-self: center;
+}
+.info {
+  margin-bottom: 100px;
+}
+
+.info__part {
+  padding-top: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+.info__part--third {
+  padding-top: 66px;
+}
+.info__part--first {
+  display: block;
+}
+.info__title {
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  font-weight: 300;
+  font-size: 32px;
+}
+.info__part-textbox {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+.info__text {
+  flex-basis: 440px;
+  margin-bottom: 30px;
+}
+
+.info__part-img {
+  object-fit: cover;
+}
+.info__content {
+  flex-basis: 415px;
+}
+.info__part--second .info__text {
+  max-width: 352px;
+}
+.info__part--third .info__text {
+  max-width: 377px;
+}
+.info__table {
+  flex-basis: 450px;
+  border-bottom: 1px solid #040404;
+  position: relative;
+  top: 20px;
+}
+.info__table::before{
+content: "";
+border-top: 1px solid #040404;
+position: absolute;
+width: 100%;
+top: -20px;
+}
+.info__table td{
+  padding-bottom: 20px;
 }
